# trixie-ai-job-hunt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml
cfg/: app_config.toml  recruiter_prompt.txt  summary_template.txt
src/: batch_runner.py  main.py
src/ai_interop/: ai_submision.py
src/data_models/: ai_models.py  config_models.py  mail_models.py
src/mail_parsing/: parsers.py
src/notifications/: gm_notify.py
tests/: test_ai_submission.py  test_gm_notify.py  test_mail_parsing.py
typings/ezgmail/: __init__.pyi
